force-app/main/default/objects/Integration_VisitResult__c/Integration_VisitResult__c.object-meta.xml
<CustomObject>
    <label>Integration VisitResult</label>
    <nameField>
        <label>Integration VisitResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration VisitResult</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>