force-app/main/default/objects/Integration_VisitResult__c/fields/DTC__c.field-meta.xml
<CustomField>
    <fullName>DTC__c</fullName>
    <label>DTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>