force-app/main/default/objects/Integration_VisitResult__c/fields/ISDELETED__c.field-meta.xml
<CustomField>
    <fullName>ISDELETED__c</fullName>
    <label>ISDELETED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>