force-app/main/default/objects/Integration_VisitResult__c/fields/MD5__c.field-meta.xml
<CustomField>
    <fullName>MD5__c</fullName>
    <label>MD5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>