force-app/main/default/objects/Integration_VisitResult__c/fields/NRIND__c.field-meta.xml
<CustomField>
    <fullName>NRIND__c</fullName>
    <label>NRIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>