force-app/main/default/objects/Integration_VisitResult__c/fields/STNRHI__c.field-meta.xml
<CustomField>
    <fullName>STNRHI__c</fullName>
    <label>STNRHI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>