force-app/main/default/objects/Integration_VisitResult__c/fields/STNRLO__c.field-meta.xml
<CustomField>
    <fullName>STNRLO__c</fullName>
    <label>STNRLO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>