force-app/main/default/objects/Integration_VisitResult__c/fields/STRESN__c.field-meta.xml
<CustomField>
    <fullName>STRESN__c</fullName>
    <label>STRESN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>