force-app/main/default/objects/Integration_VisitResult__c/fields/TESTCD__c.field-meta.xml
<CustomField>
    <fullName>TESTCD__c</fullName>
    <label>TESTCD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>