force-app/main/default/objects/Integration_VisitResult__c/fields/VISIT__c.field-meta.xml
<CustomField>
    <fullName>VISIT__c</fullName>
    <label>VISIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>