force-app/main/default/objects/Integration_VisitResult__c/fields/Vital_or_Lab__c.field-meta.xml
<CustomField>
    <fullName>Vital_or_Lab__c</fullName>
    <label>Vital_or_Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vital</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>