force-app/main/default/objects/Integration_VisitResult__c/fields/VSDTC__c.field-meta.xml
<CustomField>
    <fullName>VSDTC__c</fullName>
    <label>VSDTC</label>
    <type>Date</type>
</CustomField>