force-app/main/default/objects/Integration_VisitResult__c/fields/Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Status__c</fullName>
    <label>Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>